--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello from Git!</h1>
-    <p>This is my first page tracked with Git.</p>
+    <p>This is my first page tracked with Git. So cool..</p>
 </body>
 </html>
 
