--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Hello from Git!</h1>
     <p>This is my first page tracked with Git. So cool..</p>
+    <p>This is my first page tracked with Git. So cool..</p>
+    <p> this is going straight to remote</p>
 </body>
 </html>
 
